--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ function polarChart(ctxId, times, values, labelText) {
   ctx.lineWidth = 1;
   ctx.strokeRect(
     x - boxWidth / 2,
-    y - boxHeight / 2,
+    y - boxHeight / 2 -3,
     boxWidth,
     boxHeight
   );
