--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <img src="범례.png" width="300" height="auto" style="margin-top: 10px;">
   
 <div class="chart-row">
-<canvas id="feelsHwaseong" width="600" height="600" style="max-width: 100%;"></canvas>
+<canvas id="feelsHwaseong" width="600" height="600" style="max-width: 100%; margin-top: 30px;" ></canvas>
   <div style="text-align: left; font-size: 13.5px;">
     ※ <strong>일 최고체감온도</strong>는 시간대별 체감온도보다 더 높겠으니,<br>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;단계별 적극적인 대비가 필요합니다.<br>
